# stui

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  ELM_REWRITE_PREP.md  MIGRATION_SUMMARY.md  MODEL_DESIGN.md  NEXT_STEPS.md  PLAN.md  PLAN_SYNC.md  PLAN_SYNC_REVISED.md  RATATUI_NOTES.md  README.md  RECENT.md  SYNC.md  build.rs  config.yaml  config.yaml.example
.claude/: settings.local.json
.github/workflows/: release.yml  tests.yml
docs/: new-release.md
docs/archive/: CONNECTIVITY.md  FEATURE_PREVIEW_FILE.md  README.md  SEARCH_FEATURE.md
docs/plans/: 2025-01-09-local-files-filter.md  2025-01-09-out-of-sync-filter-refactor.md  2025-11-09-out-of-sync-filter-design.md  2025-11-09-out-of-sync-filter.md  2025-11-09-rescan-force-refresh-design.md  2025-11-09-rescan-force-refresh.md  2025-11-09-search-filter-mutual-exclusion-design.md  2025-11-09-search-filter-mutual-exclusion.md  2025-11-09-status-bar-state-indicators-design.md  2025-11-09-status-bar-state-indicators-implementation.md
features/: OPTIMIZE.md  PREVIEW_FILE.md
scripts/: release.sh
src/: api.rs  api_service.rs  cache.rs  config.rs  event_listener.rs  lib.rs  main.rs  messages.rs  model.rs  state.rs  utils.rs
src/app/: file_ops.rs  filters.rs  folder_history.rs  ignore.rs  mod.rs  navigation.rs  preview.rs  sorting.rs  sync_states.rs
src/handlers/: api.rs  events.rs  keyboard.rs  mod.rs
src/logic/: errors.rs  file.rs  folder.rs  (+15 more)
tests/: browse_cache_invalidation_test.rs  filter_index_bug_test.rs  folder_status_test.rs  out_of_sync_filter_test.rs  reconnection_test.rs  search_race_condition_test.rs
(+23 files in other folders)
