[package]
name = "synctui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.27"
crossterm = "0.27"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
urlencoding = "2.1"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5.0"
glob = "0.3"

